Fix 403 errors when clicking Resource shortcuts in SafeTensor Inspector - Modified fetchAndRenderDirectory to use filesystem mode for absolute paths (Resource shortcuts) and inspector mode for relative paths - Updated response handling to support both API response formats - Enhanced analyze_file API to handle both absolute and relative file paths - Added security restrictions for absolute path file analysis - Resources shortcuts now work correctly on all machines

--- a/model_manager.html
+++ b/model_manager.html
@@ -1826,14 +1826,22 @@ ComfyUI2: /user/ComfyUI2/models/model.safetensors → <span style="color: #4caf5
             activeAnalyses++;
             updateLoadingIndicator();
 
-            fetch(`/api/browse?path=${encodeURIComponent(path)}`)
+            // Use filesystem mode for absolute paths, inspector mode for relative paths
+            const isAbsolutePath = path && path.startsWith('/');
+            const apiUrl = isAbsolutePath ? 
+                `/api/browse?mode=filesystem&path=${encodeURIComponent(path)}` :
+                `/api/browse?path=${encodeURIComponent(path)}`;
+
+            fetch(apiUrl)
                 .then(res => {
                     if (!res.ok) return res.text().then(text => { throw new Error(`Server error: ${res.status} ${text || res.statusText}`) });
                     return res.json();
                 })
                 .then(data => {
                     tableBody.innerHTML = '';
-                    data.forEach(item => {
+                    // Handle different response formats: filesystem mode returns {current_path, items}, inspector mode returns array
+                    const items = Array.isArray(data) ? data : (data.items || []);
+                    items.forEach(item => {
                         const tr = document.createElement("tr");
                         tr.dataset.filePath = item.path;
                         tr.dataset.fileName = item.name;
